automation issues bugs resolved
